@@ -1,73 +1,64 @@
-# Pen direct operation contract
+# Pen interactive capability contract
 
-Use this reference only when `experience_target: pen`, Phase is experience, and the implementation-target Brief has been explicitly approved. A legacy Definition exploration returns to `pm-definition` and must not enter this authoring sequence. The local authority used to define this contract is Pen CLI 0.3.0 Interactive help. This is an internal Agent procedure; do not expose route names, commands, flags, file paths, node IDs, or setup details in ordinary PM interaction.
+Use only for the `pen` Experience route after a hash-bound Brief approval. This is an internal Agent procedure; do not expose commands, file paths, node IDs, or setup details in ordinary PM interaction.
 
-## Route policy and boundary
+## Discover, do not assume
 
-Prefer a persistent terminal/PTY process running headless `pen interactive` with an output inside the current bundle. App mode is allowed when an approved running Pen app/document already exists, but the resulting `.pen` source and preview exports must still be placed in the Candidate bundle. An already configured official Pen MCP/direct surface is an equivalent secondary route only when the current PM Agent can directly perform state read, batched node read, deterministic mutation, structural validation, targeted visual inspection/export, persistence, and read-back on the same `.pen` artifact.
+Run the vendored runtime's `doctor --json`. It calls local `pen interactive --help`, normalizes and fingerprints help, and returns only non-secret capability metadata. It does not read tokens, account configuration, session files, or environment credentials.
 
-Interactive is a CLI tool shell from the host Agent's perspective. Its operations may use Pen's MCP-shaped tool syntax internally, but the host does not need to configure an MCP server for the CLI route. Do not add an adapter, runtime, or configuration schema.
+Continue only when discovered help proves `get_editor_state`, `batch_get`, `batch_design`, `snapshot_layout`, `get_screenshot`, preview output, and `save()`. Version text alone is insufficient. Unknown, partial, or missing capabilities fail closed.
 
-The current PM Agent retains design control. Never use Pen's top-level prompt or managed-Agent generation modes, including `--prompt/-p`, `--prompt-file/-f`, `--agent`, `--model/-m`, `--tasks/-t`, or `--custom`; never start a nested Pen Agent or install/copy a prompt-oriented Pen Skill as another PM entry.
+## Prepare one approved input
 
-Pen scope is always proportional. For a small Change, touch only the affected screen/section and material before/after or boundary states. For an existing authoritative `.pen`, inspect and edit the related nodes while preserving unrelated work. For a Capability, cover the current vertical path; for a Product, cover only the Active Slice and explicit shared dependencies. Flow, storyboard, page/state inventory, low-fidelity wireframes, static screens, and detailed visuals are all valid Pen scopes. Clickability and full-product coverage are not defaults.
+Resolve the absolute Delivery root. `draft/experience/` and every design/output/preview parent must already be a real directory beneath that root; no component may be a symbolic link. All three CLI paths are Delivery-relative, begin with `draft/experience/`, contain no traversal, and are distinct. The design file must exist as regular UTF-8 text. The `.pen` output and `.png` preview must not exist; final publication uses filesystem hard links that reject existing destinations.
 
-## Bundle paths and preflight
+Verify that `draft/experience/brief.md` was bound by the successful `approve-brief` event and already contains the explicit PM/Owner approval words/date. Do not edit that Brief after approval. Create the worksheet, manifest, mutation input, Pen source, read-back, and preview only after this gate.
 
-- Check the direct routes available in the caller's environment and record the non-secret discovery result. Failure or absence of one optional integration does not prove that every direct route is unavailable.
-- Verify that the selected route can read current state and expose the direct operations required for the approved scope, then attempt one concrete operation. Capability discovery alone is not execution evidence.
-- New headless source: `pen interactive --out <bundle-root>/experience/prototype.pen`.
-- Existing source iteration: use `--in` and `--out` so the result remains inside the current Candidate bundle.
-- Approved running app: app mode may be used internally, then save/copy the source into `experience/prototype.pen` before Candidate freeze.
-- Headless work requires a persistent process with stdin/stdout control and an explicit output path.
-- Authentication or service availability is a host/admin concern. Record the exact non-secret limitation; never ask the PM for tokens, session files, account data, URLs, login commands, or MCP configuration.
+First copy [pen-design-input.md](../assets/pen-design-input.md) to the Delivery and complete one coverage row for every approved Brief page/state. Copy each Coverage ID and its short relationship statement unchanged from the approved Brief. The separate design file contains only visible `batch_design` DSL input that is auditable and strictly derived from those rows. Use the current discovered contract's full `Insert`, `Update`, and `Delete` operation names; shorthand operation calls are unsupported and the runner rejects them before Pen starts. Captured variables and unique display-name string parents are both allowed. Brief approval does not imply approval of raw DSL. The file does not contain the worksheet, `batch_design(...)`, state/layout/screenshot calls, `save()`, `exit()`, or an interactive transcript. Treat this file as the only mutation payload and hash it in `experience/manifest.md`.
 
-## Direct authoring sequence
+## Run one mechanical session
 
-0. Verify `experience/brief.md` exists and records the PM/Owner's explicit approval words/date for the concrete scope and fidelity. Generic workflow-continuation permission is invalid. Until this gate passes, do not call `batch_design` or any other mutation/export/save operation.
-1. Start with `get_editor_state({ include_schema: true })` and record document identity/schema availability.
-2. Load `get_guidelines()` and only the one relevant guide/style when needed.
-3. Use `batch_get(...)` for top-level, component, and affected-node discovery. Combine reads instead of reading nodes one at a time.
-4. Derive deterministic `batch_design(...)` operations from the recorded business-language brief and current Markdown behavior. Use bounded batches sized to the route's documented limits and verify each batch before continuing. The scope/fidelity must already be approved after Definition exit; the artifact may not invent or settle product rules.
-5. Use `snapshot_layout(...)` to inspect clipping, overlap, size, and structural placement; correct material problems before visual approval.
-6. Use `get_screenshot(...)` sparingly for a meaningful section, then `export_nodes(...)` to create one or more PM/reviewer preview images under `experience/previews/`.
-7. Perform an independent `batch_get(...)` read-back of affected nodes and compare names, content, states, actions, and coverage against `experience/brief.md` and the mapped Markdown locators.
-8. Call `save()`, verify the `.pen` file and exports exist outside the shell, and call `exit()` cleanly.
+Resolve this Skill's sibling runner and call it once:
 
-Available optional operations such as variables or HTML export are loaded only when the approved target requires them. Screenshots are evidence after meaningful work, not a per-operation ritual.
-
-If authoring reveals a behavior gap, stop mutation, return to the mapped Markdown Decision/Rule/Scenario through `pm-definition`, and rerun the Definition exit. Do not fill the gap inside Pen.
-
-## Evidence contract
-
-Record these internal fields in `experience/manifest.md` and summarize them in `START-HERE.md`, including the brief identity and explicit scope/fidelity approval evidence that preceded mutation. If the direct route becomes unavailable, record route discovery, capability check, one concrete attempted operation, the allowed retry result, exact limitation, and product risk. A bare unavailability claim or the absence of one optional integration is invalid evidence.
-
-```text
-experience_target: pen
-experience_status: pending | completed | skipped-risk
-experience_reason: plain-language reason | tool-unavailable
-route_identity: interactive-headless | interactive-app | official-direct | unavailable
-visual_role: exploration | implementation-target
-scope_and_fidelity: smallest affected flow/pages/states and plain-language detail
-source: experience/prototype.pen
-brief: experience/brief.md
-previews: experience/previews/<file>.png
-covered_markdown: bundle-relative file.md#ID locators
-covered_pen_nodes: experience/prototype.pen#<node-id> locators
-structural_check: result and material fixes
-visual_check: targeted screenshot/export result
-read_back: nodes checked and brief/Markdown comparison
-save_status: saved | failed | unavailable
+```bash
+node <skill-root>/scripts/run-pen-session.mjs \
+  --root <absolute-Delivery-root> \
+  --design-file draft/experience/prototype-design.txt \
+  --out draft/experience/prototype.pen \
+  --preview draft/experience/prototype.png \
+  --json
 ```
 
-Keep a successfully executed exploration at `experience_status: pending`. Set a successfully validated implementation target to `experience_status: completed` only after the formal read-back and PM preview contract passes. Reserve `experience_status: skipped-risk`, `experience_reason: tool-unavailable`, and `route_identity: unavailable` for the unavailable branch below.
+Never run `pen interactive` by hand, start a nested Pen Agent, use Pen prompt/managed-Agent generation, or route through a PM MCP/plugin. The runner uses Node 20+ with no third-party dependency and spawns exactly one `pen interactive` child with `shell: false`, `--enable-preview`, and `--preview-output`. That one child creates one new document and receives exactly these separate physical lines in order:
 
-Pass the physical `bundle_root` separately from every bundle-relative locator. These fields are Agent/reviewer traceability data, not ordinary PM-facing copy.
+1. `get_editor_state` for the new document;
+2. exactly one `batch_design` containing the Brief-derived design file;
+3. whole-document `snapshot_layout` with no cross-session node ID;
+4. `get_screenshot` with the documented `document` target;
+5. `save()` on its own line;
+6. whole-document `batch_get` read-back with no node ID;
+7. `exit()` on its own line.
 
-## Failure and retry
+No second interactive process or recovery session is allowed. In particular, never reuse node IDs observed in another process, and never append `save()` or `exit()` to a tool line. The preview is produced by that same session at the explicit preview path; a separate node export would require IDs and is not part of this new-document contract.
 
-One retry is allowed only for a concrete recoverable direct-operation error. If state read, direct mutation, save, export, or read-back still cannot be verified after an applicable retry, set `experience_status: skipped-risk`, `experience_reason: tool-unavailable`, and `route_identity: unavailable`. Record the route discovery, capability check, attempted operation, retry result, limitation, and one product risk in the manifest and summarize its identity in `START-HERE.md`. Then stop formal Pen authoring. Do not switch to a managed Agent mode or another prototype product. Continue Markdown product definition when possible. Keep the Candidate gate unfinished until the PM/Owner sees the limitation and impact and explicitly chooses to continue without the artifact.
+The runner creates one high-entropy mode-700 temporary directory under `draft/experience/`; Pen sees only its temporary `.pen` and `.png` paths. After validating those bytes, the runner re-checks that both final paths are absent and hard-links the verified `.pen` first, then the verified preview. `link()` is the publication commit: it does not overwrite an existing destination, and the runner never unlinks or renames a final path.
 
-## Review usage
+If the first link conflicts, the foreign path remains and nothing is published. If the second link conflicts or otherwise fails, the first verified final remains as an explicitly reported partial publish; error details include `published_paths`, the failed/conflicting path, and `partial_publish=true`. Do not roll back that final or claim complete evidence.
 
-Reviewers never mutate the authoritative Candidate or Release `.pen`. Use a read-only direct capability or an isolated copy/output only within the caller-authorized write scope, then perform state, batched read, layout, and screenshot inspection only. If no authorized isolated inspection is available, review the exported previews and recorded read-back evidence and state that `.pen` structure was not independently verified.
+Temporary cleanup has a two-phase boundary. Before deleting anything, the runner checks the recorded directory identity. After an early failure it removes only an identity-matched empty runner-owned directory; any unexpected entry, partial artifact set, symlink, or identity mismatch preserves the whole directory without deleting an entry. After both temporary artifacts have already passed full verification, cleanup still requires exactly `output.pen` and `preview.png`, both regular non-symlink files, before unlinking either name and removing the empty directory.
+
+## Fail closed and record evidence
+
+Success requires zero exit status with no signal, timeout, or textual Pen `Error`; a confirmed state read, mutation, clean layout, strictly decoded base64 PNG screenshot, exact temporary save path, and non-empty document read-back; plus a fatal-UTF-8-decoded, non-empty JSON `.pen` file and PNG-signature preview at the requested final paths. Final and temporary files must share the same inode immediately after each link; final bytes and hashes are read back before temporary cleanup.
+
+This is a non-adversarial same-UID boundary, not protection against a malicious process running as the same operating-system user and swapping files between checks. The hard-link operation itself remains atomic and no-overwrite. Do not describe the broader workflow as an absolute security boundary.
+
+Any runner failure ends the current action immediately. Do not start an automatic or manual Pen retry. If the Owner later explicitly requests another attempt, treat it as a new authorized action with new targets, not as part of this invocation. Report `tool-unavailable` evidence plus one product impact and ask for explicit Owner risk acceptance; do not silently switch tools or claim completion.
+
+Windows package managers commonly expose Pen as `pen.cmd`, which cannot be safely proven launchable with this runner's required shell-free policy. The default runner therefore reports `platform-unsupported` on Windows instead of enabling a shell. Do not claim Windows support until a native shell-free executable contract is verified.
+
+Record the doctor fingerprint, design/output/preview hashes, one-process runner result, layout/screenshot/save/read-back results, coverage, and external asset provenance in `experience/manifest.md`.
+
+## Review boundary
+
+Reviewers never mutate an authoritative Candidate or Release `.pen`. Use a read-only capability or caller-authorized isolated copy, otherwise inspect exact exports/read-back evidence and disclose the structural limitation.
